--- a/firebase.json
+++ b/firebase.json
@@ -26,6 +26,12 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "/",
+        "destination": "/about.html"
+      }
     ]
   },
   "emulators": {
