Include .well-known directory

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,9 @@
   },
   "hosting": {
     "public": "public",
+    "include": [
+      ".well-known/**"
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
