--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "Christopher Cartland - Maker", 
   "short_name": "Chris Cartland - Maker",  
   "icons": [], 
-  "start_url": "/", 
-  "display": "standalone", 
+  "start_url": "/hero.html", 
+  "display": "browser", 
   "background_color": "#263551" 
 }
