--- a/firebase.json
+++ b/firebase.json
@@ -16,7 +16,7 @@
     "rewrites": [
       {
         "source": "/",
-        "destination": "/about.html"
+        "destination": "/index.html"
       }
     ]
   },
