--- a/apps/SolarBattery/iosApp/Configuration/Config.xcconfig
+++ b/apps/SolarBattery/iosApp/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
-PRODUCT_NAME=Blanket
-PRODUCT_BUNDLE_IDENTIFIER=com.chriscartland.blanket.Blanket$(TEAM_ID)
+PRODUCT_NAME=SolarBattery
+PRODUCT_BUNDLE_IDENTIFIER=com.chriscartland.solarbattery.SolarBattery$(TEAM_ID)
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
