--- a/apps/SolarBattery/gradle/libs.versions.toml
+++ b/apps/SolarBattery/gradle/libs.versions.toml
@@ -21,6 +21,7 @@ spotless = "7.0.4"
 kotlinStdlib = "2.2.0"
 runner = "1.5.2"
 core = "1.5.0"
+vico = "2.0.0-alpha.19"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -42,6 +43,7 @@ ktor-serverTestHost = { module = "io.ktor:ktor-server-test-host-jvm", version.re
 kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
 androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
 androidx-core = { group = "androidx.test", name = "core", version.ref = "core" }
+vico-compose-m3 = { module = "com.patrykandpatrick.vico:compose-m3", version.ref = "vico" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
