--- a/package.json
+++ b/package.json
@@ -5,9 +5,21 @@
   "main": "index.js",
   "scripts": {
     "build": "",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:html && npm run test:css && npm run test:js",
+    "test:html": "html-validate public/**/*.html",
+    "test:css": "stylelint public/**/*.html",
+    "test:js": "eslint public/**/*.html"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-html": "^8.1.3",
+    "html-validate": "^10.0.0",
+    "postcss-html": "^1.8.0",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0"
+  }
 }
