--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,3 +10,10 @@ jobs:
       - uses: actions/checkout@v4
       - run: npm ci
       - run: npm test
+      - name: Comment on PR with broken links
+        if: hashFiles('broken-links.md') != ''
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_URL: ${{ github.event.pull_request.html_url }}
+        run: |
+          gh pr comment $PR_URL --body-file broken-links.md
