--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "scripts": {
     "start": "http-server public -p 8080",
     "build": "",
-    "test": "npm run test:html && npm run test:css && npm run test:js && npm run test:links",
+    "test": "npm run test:html && npm run test:css && npm run test:js && npm run test:links && npm run test:a11y",
     "test:html": "html-validate public/**/*.html",
     "test:css": "stylelint public/**/*.html",
     "test:js": "eslint public/**/*.html",
-    "test:links": "start-server-and-test start http://localhost:8080 './check-links.sh'"
+    "test:links": "start-server-and-test start http://localhost:8080 './check-links.sh'",
+    "pa11y": "pa11y-ci --config .pa11yci",
+    "test:a11y": "start-server-and-test start http://localhost:8080 'pa11y --config .pa11yci.json http://localhost:8080'"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +24,7 @@
     "eslint-plugin-html": "^8.1.3",
     "html-validate": "^10.0.0",
     "http-server": "^14.1.1",
+    "pa11y-ci": "^4.0.1",
     "postcss-html": "^1.8.0",
     "start-server-and-test": "^2.1.0",
     "stylelint": "^16.24.0",
