--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "test": "npm run test:html && npm run test:css && npm run test:js && npm run test:links",
     "test:html": "html-validate public/**/*.html",
     "test:css": "stylelint public/**/*.html",
-    "test:js": "eslint public/**/*.html",
-    "test:links": "start-server-and-test start http://localhost:8080 './check-links.sh'"
+    "test:js": "eslint .",
+    "test:links": "start-server-and-test start http://localhost:8080 './check-links.sh'",
+    "format": "prettier --write .",
+    "check:format": "prettier --check ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.35.0",
     "broken-link-checker": "^0.7.8",
-    "eslint": "^8.57.1",
-    "eslint-config-standard": "^17.1.0",
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-html": "^8.1.3",
+    "globals": "^16.4.0",
     "html-validate": "^10.0.0",
     "http-server": "^14.1.1",
     "postcss-html": "^1.8.0",
+    "prettier": "^3.6.2",
     "start-server-and-test": "^2.1.0",
     "stylelint": "^16.24.0",
     "stylelint-config-standard": "^39.0.0"
