feat: Configure staging and production deployment workflows
- Create separate Firebase projects for staging and production.
- Set up GitHub Environments for `staging` and `production` with appropriate protection rules.
- Update GitHub Actions workflows to deploy to staging automatically on merge to `main`, and require manual approval for production deployment.
- Add a `workflow_dispatch` trigger for manual deployments.
- Ensure code formatting is checked in all CI/CD jobs.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,9 @@
 {
   "projects": {
-    "default": "cartland-dev"
-  }
+    "default": "cartland-dev",
+    "staging": "cartland-dev-staging",
+    "production": "cartland-dev"
+  },
+  "targets": {},
+  "etags": {}
 }
