--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,7 @@ jobs:
       name: staging
       url: https://cartland-dev-staging.web.app
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           name: public-dist
@@ -44,6 +45,7 @@ jobs:
       name: production
       url: https://chriscart.land
     steps:
+      - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
         with:
           name: public-dist
