--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,12 +1,10 @@
-name: CI
+name: Deploy to Firebase Hosting
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
@@ -16,21 +14,17 @@ jobs:
       - run: npm run check:format
       - run: npm run build
       - run: npm test
-      - name: Comment on PR with broken links
-        if: github.event_name == 'pull_request' && hashFiles('broken-links.md') != ''
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
-        run: |
-          gh pr comment $PR_URL --body-file broken-links.md
       - uses: actions/upload-artifact@v4
         with:
           name: public-dist
           path: public
 
-  deploy_preview:
+  deploy_staging:
     needs: build_and_test
     runs-on: ubuntu-latest
+    environment:
+      name: staging
+      url: https://cartland-dev-staging.web.app
     steps:
       - uses: actions/checkout@v4
       - uses: actions/download-artifact@v4
@@ -42,3 +36,23 @@ jobs:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CARTLAND_DEV_STAGING }}
           projectId: cartland-dev-staging
+          channelId: live
+
+  deploy_production:
+    needs: deploy_staging
+    runs-on: ubuntu-latest
+    environment:
+      name: production
+      url: https://chriscart.land
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/download-artifact@v4
+        with:
+          name: public-dist
+          path: public
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: ${{ secrets.GITHUB_TOKEN }}
+          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_CARTLAND_DEV }}
+          projectId: cartland-dev
+          channelId: live
