refactor(ci): Implement reusable workflow architecture
- Create a reusable 'build-and-test.yml' workflow to serve as the single source of truth for CI checks.
- Refactor the deployment process into two distinct workflows: 'deploy-preview.yml' for pull requests and 'deploy.yml' for staging/production.
- Both deployment workflows now call the reusable workflow, ensuring tests and checks always pass before a deployment can occur.
- Add a 'manual-ci.yml' workflow to allow for manually triggering the build and test process.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Firebase Hosting
+name: Deploy
 on:
   push:
     branches:
@@ -6,21 +6,13 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_and_test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: npm ci
-      - run: npm run check:format
-      - run: npm run build
-      - run: npm test
-      - uses: actions/upload-artifact@v4
-        with:
-          name: public-dist
-          path: public
+  ci:
+    name: Build and Test
+    uses: ./.github/workflows/build-and-test.yml
 
   deploy_staging:
-    needs: build_and_test
+    name: Deploy to Staging
+    needs: ci
     runs-on: ubuntu-latest
     environment:
       name: staging
@@ -39,6 +31,7 @@ jobs:
           channelId: live
 
   deploy_production:
+    name: Deploy to Production
     needs: deploy_staging
     runs-on: ubuntu-latest
     environment:
