refactor(ci): Improve workflow and job naming consistency
- Update job names in 'build-and-test.yml' and 'deploy-preview.yml' to be more descriptive.
- This avoids ambiguity where a workflow and a job had the same name, leading to a clearer UI.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -4,7 +4,7 @@ on:
 
 jobs:
   build_and_test:
-    name: Build and Test
+    name: Run CI Checks
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
